# llm-sentinel

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deny.toml  docker-compose.yaml  package.json
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml
.github/workflows/: cd.yaml  ci.yaml  publish-crates.yaml  publish-npm.yml
config/: sentinel.yaml
crates/sentinel-alerting/: Cargo.toml  README.md
crates/sentinel-alerting/src/: deduplication.rs  lib.rs  rabbitmq.rs  webhook.rs
crates/sentinel-api/: Cargo.toml  README.md
crates/sentinel-api/src/: handlers.rs  lib.rs  middleware.rs  routes.rs  server.rs
crates/sentinel-api/src/handlers/: health.rs  metrics.rs  query.rs
crates/sentinel-core/: Cargo.toml  README.md
crates/sentinel-core/src/: config.rs  error.rs  events.rs  lib.rs  metrics.rs  types.rs
crates/sentinel-detection/: Cargo.toml  README.md
crates/sentinel-detection/src/: baseline.rs  engine.rs  lib.rs  stats.rs
crates/sentinel-detection/src/detectors/: cusum.rs  iqr.rs  mad.rs  mod.rs  zscore.rs
crates/sentinel-ingestion/: Cargo.toml  README.md
crates/sentinel-ingestion/src/: kafka.rs  lib.rs  otlp.rs  pipeline.rs  validation.rs
crates/sentinel-storage/: Cargo.toml  README.md
crates/sentinel-storage/src/: cache.rs  influxdb.rs  lib.rs  query.rs
deployments/: prometheus.yml
deployments/grafana/dashboards/: alert-overview.json  anomaly-detection.json  performance-metrics.json  system-health.json
deployments/grafana/provisioning/: dashboards.yaml
deployments/prometheus/alerts/: sentinel-alerts.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_DELIVERABLES.md  ARCHITECTURE_SUMMARY.md  CARGO_DEPENDENCIES_REFERENCE.toml  DEPLOYMENT.md  DETECTION_ARCHITECTURE.md  DETECTION_IMPLEMENTATION.md  DETECTION_METHODS.md  DETECTION_METHODS_SUMMARY.md  DOCUMENTATION_GUIDE.md  ECOSYSTEM_RESEARCH.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_QUICK_REFERENCE.md  PROGRESS_UPDATE.md  QUICK_START.md  README.md  RESEARCH_SUMMARY.md  TECHNICAL_ALTERNATIVES_TRADEOFFS.md  TECHNICAL_STACK_RESEARCH.md  TECH_STACK_EXECUTIVE_SUMMARY.md  deployment-guide.md  integration-examples.md  performance-benchmarks.md
examples/go/: README.md  go.mod  producer.go
examples/python/: README.md  producer.py
helm/sentinel/: Chart.yaml  README.md  values.yaml
helm/sentinel/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml  servicemonitor.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
plans/: COORDINATION_SUMMARY.md  LLM-Sentinel-Plan.md  TECHNICAL_RESEARCH_PLAN.md
sentinel/: Cargo.toml  README.md
sentinel/src/: main.rs
