[workspace]
members = [
    "crates/sentinel-core",
    "crates/sentinel-ingestion",
    "crates/sentinel-detection",
    "crates/sentinel-storage",
    "crates/sentinel-api",
    "crates/sentinel-alerting",
    "sentinel",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["LLM DevOps Team <noreply@llm-sentinel.dev>"]
license = "Apache-2.0"
repository = "https://github.com/globalbusinessadvisors/llm-sentinel"
homepage = "https://github.com/globalbusinessadvisors/llm-sentinel"
documentation = "https://docs.rs/sentinel-core"
readme = "README.md"
keywords = ["llm", "anomaly-detection", "observability", "monitoring"]
categories = ["development-tools", "web-programming"]

[workspace.dependencies]
# Async Runtime & Concurrency
tokio = { version = "1.42", features = ["full"] }
crossfire = "2.1"
ractor = "0.12"

# HTTP & gRPC
axum = { version = "0.7", features = ["macros", "ws"] }
tonic = { version = "0.12", features = ["gzip", "tls"] }
prost = "0.14"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
hyper = { version = "1.5", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Message Queue & Stream Processing
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
lapin = "2.5"
datafusion = "44.0"
arrow = "54.0"

# Database & Storage
influxdb2 = "0.5"
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "cluster-async"] }

# Serialization & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonschema = "0.26"
schemars = "0.8"

# Statistics & ML
ndarray = { version = "0.16", features = ["blas"] }
nalgebra = "0.33"
statrs = "0.17"
smartcore = { version = "0.4", features = ["serde"] }
augurs-outlier = "0.6"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }

# Configuration
figment = { version = "0.10", features = ["yaml", "toml", "env"] }
clap = { version = "4.5", features = ["derive", "env"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Security & Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.11"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Testing
criterion = "0.5"
mockall = "0.13"
wiremock = "0.6"

# Utilities
once_cell = "1.20"
dashmap = "6.1"
bytes = "1.8"
futures = "0.3"
async-trait = "0.1"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
strip = "none"
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.bench]
inherits = "release"
debug = true
strip = "none"
