[package]
name = "llm-sentinel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Enterprise-grade anomaly detection and observability platform for LLM applications"
keywords = ["llm", "anomaly-detection", "observability", "monitoring", "rust"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
# Internal crates
llm-sentinel-core = { version = "0.1.0", path = "../crates/sentinel-core" }
llm-sentinel-ingestion = { version = "0.1.0", path = "../crates/sentinel-ingestion" }
llm-sentinel-detection = { version = "0.1.0", path = "../crates/sentinel-detection" }
llm-sentinel-storage = { version = "0.1.0", path = "../crates/sentinel-storage" }
llm-sentinel-alerting = { version = "0.1.0", path = "../crates/sentinel-alerting" }
llm-sentinel-api = { version = "0.1.0", path = "../crates/sentinel-api" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Configuration
clap = { workspace = true }
figment = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }

# Utilities
once_cell = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
