[package]
name = "llm-sentinel-alerting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RabbitMQ and webhook alerting with deduplication for LLM-Sentinel anomaly detection"
keywords = ["rabbitmq", "webhooks", "alerting", "notifications", "llm"]
categories = ["asynchronous", "web-programming"]
readme = "README.md"

[dependencies]
# Internal
llm-sentinel-core = { version = "0.1.0", path = "../sentinel-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Messaging
lapin = "3.7"

# HTTP Client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
metrics = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
once_cell = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Collections
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall = { workspace = true }
wiremock = "0.6"
