[package]
name = "llm-sentinel-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "REST API server with health checks, Prometheus metrics, and query endpoints for LLM-Sentinel"
keywords = ["api", "rest", "prometheus", "metrics", "llm"]
categories = ["web-programming", "asynchronous"]
readme = "README.md"

[dependencies]
# Internal
llm-sentinel-core = { version = "0.1.0", path = "../sentinel-core" }
llm-sentinel-storage = { version = "0.1.0", path = "../sentinel-storage" }
llm-sentinel-detection = { version = "0.1.0", path = "../sentinel-detection" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP Framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
axum-test = "16.5"
