[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
validator = { workspace = true }

# Configuration
figment = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time & UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Observability
tracing = { workspace = true }
metrics = { workspace = true }

# Utilities
once_cell = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
