[package]
name = "llm-sentinel-detection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-algorithm anomaly detection engine (Z-Score, IQR, MAD, CUSUM) for LLM telemetry"
keywords = ["anomaly-detection", "statistics", "detection", "llm", "monitoring"]
categories = ["algorithms", "science"]
readme = "README.md"

[dependencies]
# Internal
llm-sentinel-core = { path = "../sentinel-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Statistics & Math
statrs = { workspace = true }
ndarray = { workspace = true }

# Data Structures
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
metrics = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
approx = "0.5"
